[project]
name = "graph-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff==0.15.6",
]

[tool.ruff]
line-length = 88
show-fixes = true
target-version = "py310"
lint.select = ["F","W","E","I","UP","PL","T201","TID252","UP007"]
lint.ignore = ["E501","PLR0913","E402","F401","F403","PLR0912","PLR0915","PLR2004","E741","PLR0911","PLW2901","PLC0206","PLW0602","PLW0603"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
